# preach

./: .env  .gitignore  Cargo.toml  LICENSE.txt  README.md  Rocket.toml
migrations/2023-09-30-133358_create_users/: up.sql
migrations/2023-09-30-133423_create_posts/: up.sql
migrations/2023-10-02-230535_site_info/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs  utils.rs
src/routes/: admin.rs  files.rs  site.rs  uploads.rs
src/routes/admin/: api.rs  index.rs  login.rs  logout.rs  posts.rs  settings.rs  setup.rs
src/routes/admin/api/: post.rs  settings.rs  upload_image.rs
src/routes/admin/api/post/: update_body.rs  update_date.rs  update_slug.rs  update_status.rs  update_title.rs
src/routes/admin/api/settings/: update_description.rs  update_image.rs  update_short_description.rs  update_title.rs
src/routes/site/: blog.rs  blog_post.rs  index.rs
src/utils/: conversion.rs  data.rs  date.rs
static/css/: admin.css  site.css
static/js/: site.js
templates/admin/: base.html.tera  edit_post.html.tera  login.html.tera  posts.html.tera  settings.html.tera  setup.html.tera
templates/site/: base.html.tera  blog.html.tera  blog_post.html.tera  index.html.tera
