[package]
name = "preach"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
chrono = "0.4.31"
bcrypt = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
diesel_migrations = "2.1.0"
serde_json = "1.0.107"
time = { version = "0.3", features = ["macros", "parsing"] }

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["tera"]

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
